// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders larger logo when desktop / long-desktop returned by hook 1`] = `
<DocumentFragment>
  <header
    class="header"
    role="banner"
  >
    <div
      class="header-inner"
    >
      <div
        style="display: flex; align-items: center; gap: 12px;"
      >
        <a
          aria-label="FIAP – página inicial"
          href="/"
        >
          <img
            alt="FIAP"
            data-next-image-mock="true"
            height="70"
            src="/svgs/logo-fiap.svg"
            width="400"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Progresso de leitura da página"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="12"
      class="header-progress-bar"
      role="progressbar"
    >
      <div
        class="header-progress-fill"
        style="width: 12%;"
      />
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders logo and progress bar (mobile size) 1`] = `
<DocumentFragment>
  <header
    class="header"
    role="banner"
  >
    <div
      class="header-inner"
    >
      <div
        style="display: flex; align-items: center; gap: 12px;"
      >
        <a
          aria-label="FIAP – página inicial"
          href="/"
        >
          <img
            alt="FIAP"
            data-next-image-mock="true"
            height="23"
            src="/svgs/logo-fiap.svg"
            width="84"
          />
        </a>
      </div>
    </div>
    <div
      aria-label="Progresso de leitura da página"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42"
      class="header-progress-bar"
      role="progressbar"
    >
      <div
        class="header-progress-fill"
        style="width: 42.3%;"
      />
    </div>
  </header>
</DocumentFragment>
`;
